# mlcg

./: .gitignore  .gitlab-ci.yml  .test_durations  README.rst  env_cpu_with_hashes.in  env_with_hashes.in  pylock.cpu.toml  pylock.cu128.toml  pylock.cu130.toml  pylock.no_hashes.toml  pylock.rocm72.toml  pylock_cpu.toml  pylock_cu128.toml  pylock_cu130.toml  pylock_no_hashes.toml  pyproject.toml  requirements.txt  setup.py
.circleci/: Dockerfile  README.md  config.yml
.github/workflows/: branch_name.yaml  documentation.yml  lint.yaml
docs/: .buildinfo  .buildinfo.bak  autodoc.html  bibliography.html  coarse_graining.html  data.html  datasets.html  examples.html  genindex.html  geometry.html  index.html  models.html  neighbor_list.html  objects.inv  priors.html  py-modindex.html  search.html  searchindex.js  simulation.html  training.html
docs/.doctrees/: autodoc.doctree  bibliography.doctree  coarse_graining.doctree  data.doctree  datasets.doctree  environment.pickle  examples.doctree  geometry.doctree  index.doctree  models.doctree  neighbor_list.doctree  priors.doctree  simulation.doctree  training.doctree
docs/.doctrees/data/: atom_data.doctree  fixed_datasets.doctree  h5_datasets.doctree  index.doctree
docs/.doctrees/dev/: dev.doctree  doc.doctree  index.doctree  tests.doctree
docs/.doctrees/geometry/: index.doctree  internal_coordinates.doctree  neighbor_list.doctree  statistics.doctree  topology.doctree
docs/.doctrees/misc/: coarse_graining.doctree  index.doctree  mol_utils.doctree  utils.doctree
docs/.doctrees/models/: cutoffs.doctree  index.doctree  losses.doctree  mlip.doctree  priors.doctree  rbfs.doctree  wrappers.doctree
docs/.doctrees/simulation/: index.doctree  langevin.doctree  overdamped.doctree  parallel_tempering.doctree  utils.doctree
docs/_modules/: index.html
docs/_modules/mlcg/: mol_utils.html  utils.html
docs/_sources/data/: atom_data.rst.txt
docs/_sources/geometry/: topology.rst.txt
docs/_sources/models/: cutoffs.rst.txt  rbfs.rst.txt
docs/_static/: pygments.css
docs/data/: atom_data.html  fixed_datasets.html  h5_datasets.html  index.html
docs/dev/: dev.html  doc.html  index.html  tests.html
docs/geometry/: index.html  internal_coordinates.html  neighbor_list.html  statistics.html  topology.html
docs/misc/: coarse_graining.html  index.html  mol_utils.html  utils.html
docs/models/: cutoffs.html  index.html  losses.html  mlip.html  priors.html  rbfs.html  wrappers.html
docs/simulation/: index.html  langevin.html  overdamped.html  parallel_tempering.html  utils.html
docs/source/: conf.py  examples.rst  geometry.rst  index.rst  models.rst  neighbor_list.rst  training.rst
docs/source/_static/: custom.css
docs/source/data/: fixed_datasets.rst  h5_datasets.rst  index.rst
docs/source/dev/: doc.rst  index.rst  tests.rst
docs/source/geometry/: index.rst  internal_coordinates.rst  neighbor_list.rst  statistics.rst
docs/source/misc/: index.rst  mol_utils.rst  utils.rst
docs/source/models/: index.rst  losses.rst  mlip.rst  priors.rst  wrappers.rst
docs/source/simulation/: index.rst  langevin.rst  overdamped.rst  parallel_tempering.rst  utils.rst
examples/: README.rst  conftest.py  test_examples.py
examples/grappa_schnet_cython/: allegro_mlcg_train_1nodes.sh  partition.yaml  requirments_freeze.txt  training.yaml
examples/h5_pl/: README.md
examples/h5_pl/multiple_molecules/: README.md  cln_sim_demo.yaml  small_partition_demo.yaml  train_demo_cuda.yaml
examples/h5_pl/single_molecule/: README.md  training.yaml
examples/input_yamls/: README.md  train_allegro.yaml  train_mace.yaml  train_painn.yaml  train_schnet.yaml  train_schnet_attention.yaml  train_schnet_exclusions.yaml  train_so3krates.yaml
examples/input_yamls/slurm_example/: train.yaml
examples/notebooks/: Building_A_Coarse_Grain_Model.ipynb
mlcg/cg/: projection.py
mlcg/data/: adnoiser.py
mlcg/datasets/: chignolin.py  h5_dataset.py  h5_dataset_ng.py  test_h5.py  utils.py
mlcg/datasets/cython/: batch_helper.pyx  collater.pyx  transform.pyx
mlcg/geometry/: __init__.py  internal_coordinates.py  topology.py
mlcg/neighbor_list/: test_torch_nl.py  torch_impl.py
mlcg/nn/: __init__.py  allegro.py  check_h5_elements.py  gradients.py  losses.py  mace.py  mace_interface.py  mlp.py  old_prior.py  prior.py  pyg_forward_compatibility.py  reg_schnet.py  schnet.py  so3krates.py  standard_allegro.py  test_mace.py  test_outs.py  two_body.py
mlcg/nn/angular_basis/: spherical_harmonics.py
mlcg/nn/prior/: Andrea_repulsion_fitted.py  __init__.py  base.py  fourier_series.py  harmonic.py  polynomial.py  repulsion.py  restricted_bending.py
mlcg/pl/: __init__.py  callbacks.py  cli.py  h5_data.py  h5_data_ng.py  model.py  model_regularized.py  utils.py
mlcg/simulation/: base.py  cli.py  langevin.py  parallel_tempering.py  test_compilation.py  test_simulation.py  torch_compile_warning.py
opt_radius/: README.md  setup.py
opt_radius/mlcg_opt_radius/: radius.py
scripts/: allegro-train_h5.py  config_allegro-train_h5.yaml  jacopo_small_test.py  jacopo_test2.py  mlcg-adapt-training-yaml.py  mlcg-combine_model.py  mlcg-nvt_langevin.py  mlcg-train.py  mlcg-train_h5_juw.py  test_unraveled_allegro.py  train-allegro_h5.py  unraveled_allegro.py
src/mlcg/: mol_utils.py  utils.py
src/mlcg/data/: _keys.py  (+2 more)
src/opt_radius/: README.md  setup.py
src/scripts/: mlcg_combine_model.py  mlcg_nvt_langevin.py  mlcg_nvt_pt_langevin.py  mlcg_train.py  mlcg_train_h5.py  mlcg_train_regularized.py
src/simulation/: cli.py
tests/: .test_durations  README.md  README.rst  conftest.py
tests/continuity/: base_sim_config.yaml  test_combine_and_sim_old_ckpt.py  test_restart_old_sim_ckpt.py  test_restart_old_training_ckpt.py  test_sim_old_ckpts.py  test_train_and_sim_old_ckpt.py
tests/datasets/: test_h5.py
tests/integration/: test_examples.py
tests/neighbor_list/: test_neighbor_list.py  test_torch_nl.py
tests/nn/: test_outs.py  test_rbf_regularized_schnet.py
tests/pl/: test_fix_hparams_saving.py
tests/simulation/: test_compilation.py  test_simulation.py  utils.py
(+229 files in other folders)
